Added OIDC login support and session cookie support
